--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -16,6 +16,8 @@ library(tidyverse)
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
 
+# Problem 2
+
 ``` r
 homicide_data_df = read_csv("./data/homicide-data.csv") %>% 
 janitor::clean_names()
@@ -29,3 +31,11 @@ janitor::clean_names()
     ## 
     ## ℹ Use `spec()` to retrieve the full column specification for this data.
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+Raw data decription:
+
+1.  This dataset contains 52179 observations and 12 variables.
+
+2.  Variables include : uid, reported_date, victim_last, victim_first,
+    victim_race, victim_age, victim_sex, city, state, lat, lon,
+    disposition
