--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -39,3 +39,13 @@ Raw data decription:
 2.  Variables include : uid, reported_date, victim_last, victim_first,
     victim_race, victim_age, victim_sex, city, state, lat, lon,
     disposition
+
+Create a new variable “city_state” to combine city and state columns
+
+``` r
+homicide_data_df = homicide_data_df %>% 
+  mutate(
+    city_state = str_c(city, state, sep = ",")
+  ) %>% 
+  select(-city,-state)
+```
