Create a new variable to show if this homicide has been solved

--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -49,3 +49,16 @@ homicide_data_df = homicide_data_df %>%
   ) %>% 
   select(-city,-state)
 ```
+
+Create a new variable to show if this homicide has been solved
+
+``` r
+homicide_data_df = homicide_data_df %>% 
+  mutate(
+    whether_solved = case_when(
+      disposition == "Closed without arrest" ~ "unsolved",
+      disposition == "Open/No arrest" ~ "unsolved",
+      disposition == "Closed by arrest" ~ "solved"
+    )
+  )
+```
