--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -62,3 +62,30 @@ homicide_data_df = homicide_data_df %>%
     )
   )
 ```
+
+Obtain the total number of homicides and the number of unsolved
+homicides
+
+``` r
+homicide_data_df %>% 
+  group_by(city_state) %>% 
+  summarise(
+    homicide_total = n(),
+    homicide_unsolved = sum(whether_solved == "unsolved")
+  )
+```
+
+    ## # A tibble: 51 × 3
+    ##    city_state     homicide_total homicide_unsolved
+    ##    <chr>                   <int>             <int>
+    ##  1 Albuquerque,NM            378               146
+    ##  2 Atlanta,GA                973               373
+    ##  3 Baltimore,MD             2827              1825
+    ##  4 Baton Rouge,LA            424               196
+    ##  5 Birmingham,AL             800               347
+    ##  6 Boston,MA                 614               310
+    ##  7 Buffalo,NY                521               319
+    ##  8 Charlotte,NC              687               206
+    ##  9 Chicago,IL               5535              4073
+    ## 10 Cincinnati,OH             694               309
+    ## # … with 41 more rows
