--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -67,12 +67,13 @@ Obtain the total number of homicides and the number of unsolved
 homicides
 
 ``` r
-homicide_data_df %>% 
+num_of_homicide_df = homicide_data_df %>% 
   group_by(city_state) %>% 
   summarise(
     homicide_total = n(),
     homicide_unsolved = sum(whether_solved == "unsolved")
-  )
+  ) 
+num_of_homicide_df
 ```
 
     ## # A tibble: 51 × 3
@@ -89,3 +90,17 @@ homicide_data_df %>%
     ##  9 Chicago,IL               5535              4073
     ## 10 Cincinnati,OH             694               309
     ## # … with 41 more rows
+
+1.  Estimate the proportion of homicides that are unsolved in
+    Baltimore,MD and save the output of prop.test
+
+``` r
+Baltimore_unsolved_homicide_df = num_of_homicide_df %>% 
+  filter(city_state == "Baltimore,MD")
+  x = Baltimore_unsolved_homicide_df %>%
+    pull(homicide_unsolved)  
+  n = Baltimore_unsolved_homicide_df %>%
+    pull(homicide_total)
+result_df = prop.test(x,n) %>% 
+  broom::tidy()
+```
