--- a/p8105_hw5_zc2610.Rmd
+++ b/p8105_hw5_zc2610.Rmd
@@ -57,6 +57,9 @@ num_of_homicide_df
 ```
 
 1. Estimate the proportion of homicides that are unsolved in Baltimore,MD and save the output of prop.test
+
+2. Pull the estimated proportion and confidence intervals from the resulting tidy dataframe
+
 ```{r}
 Baltimore_unsolved_homicide_df = num_of_homicide_df %>% 
   filter(city_state == "Baltimore,MD")
@@ -66,6 +69,10 @@ Baltimore_unsolved_homicide_df = num_of_homicide_df %>%
     pull(homicide_total)
 result_df = prop.test(x,n) %>% 
   broom::tidy()
+result_df
+# pull the estimated proportion and confidence intervals from the resulting tidy dataframe.
+result_df %>% 
+  select(estimate,conf.low,conf.high)
 ```
 
 
