--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -94,6 +94,9 @@ num_of_homicide_df
 1.  Estimate the proportion of homicides that are unsolved in
     Baltimore,MD and save the output of prop.test
 
+2.  Pull the estimated proportion and confidence intervals from the
+    resulting tidy dataframe
+
 ``` r
 Baltimore_unsolved_homicide_df = num_of_homicide_df %>% 
   filter(city_state == "Baltimore,MD")
@@ -103,4 +106,22 @@ Baltimore_unsolved_homicide_df = num_of_homicide_df %>%
     pull(homicide_total)
 result_df = prop.test(x,n) %>% 
   broom::tidy()
+result_df
 ```
+
+    ## # A tibble: 1 × 8
+    ##   estimate statistic  p.value parameter conf.low conf.high method        alter…¹
+    ##      <dbl>     <dbl>    <dbl>     <int>    <dbl>     <dbl> <chr>         <chr>  
+    ## 1    0.646      239. 6.46e-54         1    0.628     0.663 1-sample pro… two.si…
+    ## # … with abbreviated variable name ¹​alternative
+
+``` r
+# pull the estimated proportion and confidence intervals from the resulting tidy dataframe.
+result_df %>% 
+  select(estimate,conf.low,conf.high)
+```
+
+    ## # A tibble: 1 × 3
+    ##   estimate conf.low conf.high
+    ##      <dbl>    <dbl>     <dbl>
+    ## 1    0.646    0.628     0.663
