--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -125,3 +125,15 @@ result_df %>%
     ##   estimate conf.low conf.high
     ##      <dbl>    <dbl>     <dbl>
     ## 1    0.646    0.628     0.663
+
+1.  Estimate the proportion of homicides that are unsolved in each city
+
+``` r
+  x = num_of_homicide_df %>%
+  pull(homicide_unsolved) 
+  n = num_of_homicide_df %>% 
+  pull(homicide_total) 
+ City_unsolved_homicide_df =  map2(x,n,prop.test)
+```
+
+    ## Warning in .f(.x[[i]], .y[[i]], ...): Chi-squared approximation may be incorrect
