Tidy hypothesis outputs of the dataframe

--- a/p8105_hw5_zc2610.Rmd
+++ b/p8105_hw5_zc2610.Rmd
@@ -83,6 +83,8 @@ result_df %>%
   n = num_of_homicide_df %>% 
   pull(homicide_total) 
  City_unsolved_homicide_df =  map2(x,n,prop.test)
+ # Tidy hypothesis outputs of the dataframe
+ Tidy_city_unsolved_homicide_df = map(City_unsolved_homicide_df, broom::tidy)
 ```
 
 
