--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -137,3 +137,8 @@ result_df %>%
 ```
 
     ## Warning in .f(.x[[i]], .y[[i]], ...): Chi-squared approximation may be incorrect
+
+``` r
+ # Tidy hypothesis outputs of the dataframe
+ Tidy_city_unsolved_homicide_df = map(City_unsolved_homicide_df, broom::tidy)
+```
