--- a/p8105_hw5_zc2610.Rmd
+++ b/p8105_hw5_zc2610.Rmd
@@ -77,14 +77,21 @@ result_df %>%
 
 1. Estimate the proportion of homicides that are unsolved in each city
 
+2. Tidy hypothesis outputs of the dataframe
+
+3. Create a new dataframe containing variables in num_of_homicide_df dataframe and two new variables: City_unsolved_homicide and Tidy_city_unsolved_homicide which include lists of hypothesis outputs
+
 ```{r}
   x = num_of_homicide_df %>%
   pull(homicide_unsolved) 
   n = num_of_homicide_df %>% 
   pull(homicide_total) 
- City_unsolved_homicide_df =  map2(x,n,prop.test)
- # Tidy hypothesis outputs of the dataframe
- Tidy_city_unsolved_homicide_df = map(City_unsolved_homicide_df, broom::tidy)
+  hypothesis_result_df = num_of_homicide_df %>% 
+    mutate(
+      City_unsolved_homicide =  map2(x,n,prop.test),
+       # Tidy hypothesis outputs of the dataframe
+      Tidy_city_unsolved_homicide = map(City_unsolved_homicide, broom::tidy)
+    ) 
 ```
 
 
