--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -135,6 +135,9 @@ result_df %>%
     Tidy_city_unsolved_homicide which include lists of hypothesis
     outputs
 
+4.  Create a tidy dataframe with estimated proportions and CIs for each
+    cit
+
 ``` r
   x = num_of_homicide_df %>%
   pull(homicide_unsolved) 
@@ -145,7 +148,31 @@ result_df %>%
       City_unsolved_homicide =  map2(x,n,prop.test),
        # Tidy hypothesis outputs of the dataframe
       Tidy_city_unsolved_homicide = map(City_unsolved_homicide, broom::tidy)
-    ) 
+    ) %>% 
+    select(city_state,Tidy_city_unsolved_homicide)
 ```
 
     ## Warning in .f(.x[[i]], .y[[i]], ...): Chi-squared approximation may be incorrect
+
+``` r
+    unnest(hypothesis_result_df) %>% 
+    select(city_state,estimate,conf.low,conf.high)
+```
+
+    ## Warning: `cols` is now required when using unnest().
+    ## Please use `cols = c(Tidy_city_unsolved_homicide)`
+
+    ## # A tibble: 51 × 4
+    ##    city_state     estimate conf.low conf.high
+    ##    <chr>             <dbl>    <dbl>     <dbl>
+    ##  1 Albuquerque,NM    0.386    0.337     0.438
+    ##  2 Atlanta,GA        0.383    0.353     0.415
+    ##  3 Baltimore,MD      0.646    0.628     0.663
+    ##  4 Baton Rouge,LA    0.462    0.414     0.511
+    ##  5 Birmingham,AL     0.434    0.399     0.469
+    ##  6 Boston,MA         0.505    0.465     0.545
+    ##  7 Buffalo,NY        0.612    0.569     0.654
+    ##  8 Charlotte,NC      0.300    0.266     0.336
+    ##  9 Chicago,IL        0.736    0.724     0.747
+    ## 10 Cincinnati,OH     0.445    0.408     0.483
+    ## # … with 41 more rows
