--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -16,6 +16,10 @@ library(tidyverse)
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
 
+``` r
+library(ggplot2)
+```
+
 # Problem 2
 
 ``` r
@@ -155,24 +159,27 @@ result_df %>%
     ## Warning in .f(.x[[i]], .y[[i]], ...): Chi-squared approximation may be incorrect
 
 ``` r
-    unnest(hypothesis_result_df) %>% 
+    tidy_hypothesis_result_df = unnest(hypothesis_result_df) %>% 
     select(city_state,estimate,conf.low,conf.high)
 ```
 
     ## Warning: `cols` is now required when using unnest().
     ## Please use `cols = c(Tidy_city_unsolved_homicide)`
 
-    ## # A tibble: 51 × 4
-    ##    city_state     estimate conf.low conf.high
-    ##    <chr>             <dbl>    <dbl>     <dbl>
-    ##  1 Albuquerque,NM    0.386    0.337     0.438
-    ##  2 Atlanta,GA        0.383    0.353     0.415
-    ##  3 Baltimore,MD      0.646    0.628     0.663
-    ##  4 Baton Rouge,LA    0.462    0.414     0.511
-    ##  5 Birmingham,AL     0.434    0.399     0.469
-    ##  6 Boston,MA         0.505    0.465     0.545
-    ##  7 Buffalo,NY        0.612    0.569     0.654
-    ##  8 Charlotte,NC      0.300    0.266     0.336
-    ##  9 Chicago,IL        0.736    0.724     0.747
-    ## 10 Cincinnati,OH     0.445    0.408     0.483
-    ## # … with 41 more rows
+Create a plot that shows the estimates and CIs for each city
+
+``` r
+tidy_hypothesis_result_df %>% 
+  ggplot(aes(x = city_state,y = estimate,color = city_state)) +
+  geom_point() +
+  geom_errorbar(aes(ymax = conf.high,ymin = conf.low)) +
+  labs(
+    title = "Estimated proportions and CIs of unsolved homicides in each city",
+     x = "City & State",
+     y = "Estimated Proportion",
+    caption = "Data from [Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0) license]"
+  ) +
+  theme(axis.text.x = element_text(angle = 60, hjust = 1),plot.title = element_text(hjust = 0.5),legend.position = "none") 
+```
+
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
