--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -166,10 +166,35 @@ result_df %>%
     ## Warning: `cols` is now required when using unnest().
     ## Please use `cols = c(Tidy_city_unsolved_homicide)`
 
-Create a plot that shows the estimates and CIs for each city
+``` r
+    tidy_hypothesis_result_df
+```
+
+    ## # A tibble: 51 × 4
+    ##    city_state     estimate conf.low conf.high
+    ##    <chr>             <dbl>    <dbl>     <dbl>
+    ##  1 Albuquerque,NM    0.386    0.337     0.438
+    ##  2 Atlanta,GA        0.383    0.353     0.415
+    ##  3 Baltimore,MD      0.646    0.628     0.663
+    ##  4 Baton Rouge,LA    0.462    0.414     0.511
+    ##  5 Birmingham,AL     0.434    0.399     0.469
+    ##  6 Boston,MA         0.505    0.465     0.545
+    ##  7 Buffalo,NY        0.612    0.569     0.654
+    ##  8 Charlotte,NC      0.300    0.266     0.336
+    ##  9 Chicago,IL        0.736    0.724     0.747
+    ## 10 Cincinnati,OH     0.445    0.408     0.483
+    ## # … with 41 more rows
+
+1.  Create a plot that shows the estimates and CIs for each city
+
+2.  Organize cities according to the proportion of unsolved homicides
+    and save the plot to a file folder.
 
 ``` r
-tidy_hypothesis_result_df %>% 
+tidy_hypothesis_result_df = tidy_hypothesis_result_df %>% 
+  mutate(
+    city_state = fct_reorder(city_state, estimate)
+  ) %>% 
   ggplot(aes(x = city_state,y = estimate,color = city_state)) +
   geom_point() +
   geom_errorbar(aes(ymax = conf.high,ymin = conf.low)) +
@@ -179,7 +204,13 @@ tidy_hypothesis_result_df %>%
      y = "Estimated Proportion",
     caption = "Data from [Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0) license]"
   ) +
-  theme(axis.text.x = element_text(angle = 60, hjust = 1),plot.title = element_text(hjust = 0.5),legend.position = "none") 
+  theme(axis.text.x = element_text(angle = 60, hjust = 1),plot.title = element_text(hjust = 0.5),legend.position = "none")
+
+tidy_hypothesis_result_df
 ```
 
 ![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
+
+``` r
+  ggsave("./plots/Estimated_proportions_and_CIs_for_each_city.pdf",tidy_hypothesis_result_df, width = 8, height = 5)
+```
