--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -238,7 +238,7 @@ sim_estimate_pvalue = function(n = 30, mu, sd = 5){
 ```
 
 Set mu=0, generate 5000 datasets from the model x∼Normal\[μ,σ\] and save
-mu_hat and p.value arising from a test of H:μ=0 using α=0.05
+mu_hat and p.value arising from a test of H:μ=0 α=0.05 using a for loop
 
 ``` r
 output = vector("list",length = 50)
@@ -251,14 +251,28 @@ bind_rows(output)
     ## # A tibble: 50 × 2
     ##     mu_hat p_value
     ##      <dbl>   <dbl>
-    ##  1 -0.505    0.537
-    ##  2 -0.406    0.644
-    ##  3  0.0698   0.944
-    ##  4  0.397    0.671
-    ##  5  0.162    0.864
-    ##  6 -0.568    0.522
-    ##  7 -0.596    0.565
-    ##  8 -0.108    0.922
-    ##  9  1.05     0.253
-    ## 10  0.646    0.391
+    ##  1 -1.26    0.176 
+    ##  2  1.66    0.0528
+    ##  3  0.333   0.724 
+    ##  4  0.877   0.427 
+    ##  5  0.678   0.299 
+    ##  6 -0.668   0.409 
+    ##  7 -0.852   0.410 
+    ##  8  0.140   0.887 
+    ##  9 -1.26    0.158 
+    ## 10  0.0910  0.904 
     ## # … with 40 more rows
+
+Repeat the above for mu={1,2,3,4,5,6}
+
+``` r
+sim_results = tibble(
+  mu = c(1,2,3,4,5,6)
+) %>% 
+  mutate(
+    output_lists = map(.x = mu,~rerun(50,sim_estimate_pvalue(30,.x,5))),
+    estimate_df = map(output_lists,bind_rows)
+  ) %>% 
+  select(-output_lists) %>% 
+  unnest(estimate_df) #expand the tibble list two show the two columns: mu and p_value
+```
