--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -251,16 +251,16 @@ bind_rows(output)
     ## # A tibble: 50 × 2
     ##     mu_hat p_value
     ##      <dbl>   <dbl>
-    ##  1 -1.26    0.176 
-    ##  2  1.66    0.0528
-    ##  3  0.333   0.724 
-    ##  4  0.877   0.427 
-    ##  5  0.678   0.299 
-    ##  6 -0.668   0.409 
-    ##  7 -0.852   0.410 
-    ##  8  0.140   0.887 
-    ##  9 -1.26    0.158 
-    ## 10  0.0910  0.904 
+    ##  1  0.835  0.291  
+    ##  2 -0.172  0.843  
+    ##  3  0.0269 0.968  
+    ##  4  2.52   0.00192
+    ##  5 -0.544  0.586  
+    ##  6  1.03   0.239  
+    ##  7 -0.940  0.243  
+    ##  8 -0.966  0.319  
+    ##  9 -0.153  0.883  
+    ## 10 -1.15   0.264  
     ## # … with 40 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
@@ -275,4 +275,19 @@ sim_results = tibble(
   ) %>% 
   select(-output_lists) %>% 
   unnest(estimate_df) #expand the tibble list two show the two columns: mu and p_value
+```
+
+Create a new variable named conclusion to show whether the null
+hypothesis is rejected (since α=0.05, then p_value should be compared
+with 0.05 to determine whether the null hypothesis is rejected(when
+p_value \< 0.05))
+
+``` r
+sim_results = sim_results %>% 
+  mutate(
+    conclusion = case_when(
+      p_value < 0.05 ~ "reject",
+      p_value >= 0.05 ~ "fail to reject"
+    )
+  )
 ```
