--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -251,16 +251,16 @@ bind_rows(output)
     ## # A tibble: 50 × 2
     ##     mu_hat p_value
     ##      <dbl>   <dbl>
-    ##  1  0.835  0.291  
-    ##  2 -0.172  0.843  
-    ##  3  0.0269 0.968  
-    ##  4  2.52   0.00192
-    ##  5 -0.544  0.586  
-    ##  6  1.03   0.239  
-    ##  7 -0.940  0.243  
-    ##  8 -0.966  0.319  
-    ##  9 -0.153  0.883  
-    ## 10 -1.15   0.264  
+    ##  1  0.410   0.625 
+    ##  2 -0.632   0.469 
+    ##  3  0.767   0.393 
+    ##  4 -0.0590  0.944 
+    ##  5 -0.654   0.529 
+    ##  6 -1.62    0.0137
+    ##  7  0.595   0.473 
+    ##  8 -1.38    0.196 
+    ##  9 -0.261   0.767 
+    ## 10  0.494   0.608 
     ## # … with 40 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
@@ -290,4 +290,46 @@ sim_results = sim_results %>%
       p_value >= 0.05 ~ "fail to reject"
     )
   )
+sim_results
 ```
+
+    ## # A tibble: 300 × 4
+    ##       mu mu_hat p_value conclusion    
+    ##    <dbl>  <dbl>   <dbl> <chr>         
+    ##  1     1  0.440  0.692  fail to reject
+    ##  2     1  0.623  0.518  fail to reject
+    ##  3     1  1.52   0.0826 fail to reject
+    ##  4     1  0.926  0.352  fail to reject
+    ##  5     1  1.48   0.134  fail to reject
+    ##  6     1  1.78   0.116  fail to reject
+    ##  7     1  1.30   0.172  fail to reject
+    ##  8     1  1.87   0.0582 fail to reject
+    ##  9     1  0.531  0.574  fail to reject
+    ## 10     1  1.71   0.0534 fail to reject
+    ## # … with 290 more rows
+
+1.  Count the number of total conclusions with each true mu
+2.  Count the number of “reject” conclusions with each true mu
+3.  Calculate the proportion of times the null was rejected
+
+``` r
+sim_results %>% 
+  group_by(mu) %>% 
+  summarise(
+    conclusion_total = n(),
+    conclusion_reject = sum(conclusion == "reject")
+  ) %>% 
+  mutate(
+    proportion = conclusion_reject/conclusion_total
+  )
+```
+
+    ## # A tibble: 6 × 4
+    ##      mu conclusion_total conclusion_reject proportion
+    ##   <dbl>            <int>             <int>      <dbl>
+    ## 1     1               50                 5       0.1 
+    ## 2     2               50                28       0.56
+    ## 3     3               50                47       0.94
+    ## 4     4               50                50       1   
+    ## 5     5               50                50       1   
+    ## 6     6               50                50       1
