--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -251,16 +251,16 @@ bind_rows(output)
     ## # A tibble: 50 × 2
     ##     mu_hat p_value
     ##      <dbl>   <dbl>
-    ##  1  0.410   0.625 
-    ##  2 -0.632   0.469 
-    ##  3  0.767   0.393 
-    ##  4 -0.0590  0.944 
-    ##  5 -0.654   0.529 
-    ##  6 -1.62    0.0137
-    ##  7  0.595   0.473 
-    ##  8 -1.38    0.196 
-    ##  9 -0.261   0.767 
-    ## 10  0.494   0.608 
+    ##  1  0.853    0.403
+    ##  2  0.483    0.586
+    ##  3  0.871    0.347
+    ##  4 -0.292    0.789
+    ##  5 -0.189    0.831
+    ##  6 -0.0460   0.961
+    ##  7 -0.369    0.676
+    ##  8 -0.0960   0.921
+    ##  9 -0.146    0.878
+    ## 10 -0.672    0.340
     ## # … with 40 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
@@ -294,26 +294,32 @@ sim_results
 ```
 
     ## # A tibble: 300 × 4
-    ##       mu mu_hat p_value conclusion    
-    ##    <dbl>  <dbl>   <dbl> <chr>         
-    ##  1     1  0.440  0.692  fail to reject
-    ##  2     1  0.623  0.518  fail to reject
-    ##  3     1  1.52   0.0826 fail to reject
-    ##  4     1  0.926  0.352  fail to reject
-    ##  5     1  1.48   0.134  fail to reject
-    ##  6     1  1.78   0.116  fail to reject
-    ##  7     1  1.30   0.172  fail to reject
-    ##  8     1  1.87   0.0582 fail to reject
-    ##  9     1  0.531  0.574  fail to reject
-    ## 10     1  1.71   0.0534 fail to reject
+    ##       mu  mu_hat p_value conclusion    
+    ##    <dbl>   <dbl>   <dbl> <chr>         
+    ##  1     1  0.931   0.264  fail to reject
+    ##  2     1  0.459   0.596  fail to reject
+    ##  3     1  1.59    0.0607 fail to reject
+    ##  4     1 -0.110   0.912  fail to reject
+    ##  5     1 -0.178   0.824  fail to reject
+    ##  6     1  1.59    0.132  fail to reject
+    ##  7     1  0.611   0.542  fail to reject
+    ##  8     1  0.903   0.295  fail to reject
+    ##  9     1  0.0371  0.963  fail to reject
+    ## 10     1  1.76    0.111  fail to reject
     ## # … with 290 more rows
 
 1.  Count the number of total conclusions with each true mu
+
 2.  Count the number of “reject” conclusions with each true mu
+
 3.  Calculate the proportion of times the null was rejected
 
+4.  Make a plot showing the proportion of times the null was rejected
+    (the power of the test) on the y axis and the true value of μ on the
+    x axis.
+
 ``` r
-sim_results %>% 
+proportion_reject = sim_results %>% 
   group_by(mu) %>% 
   summarise(
     conclusion_total = n(),
@@ -321,15 +327,30 @@ sim_results %>%
   ) %>% 
   mutate(
     proportion = conclusion_reject/conclusion_total
-  )
+  ) %>% 
+  ggplot(aes(x = mu, y = proportion, color = mu)) +
+  geom_point() +
+  geom_line() +
+  labs(
+    title = "The association between effect size and power",
+     x = "True mu",
+     y = "Proportion of times the null was rejected"
+  ) +
+  theme(plot.title = element_text(hjust = 0.5))
+
+proportion_reject
 ```
 
-    ## # A tibble: 6 × 4
-    ##      mu conclusion_total conclusion_reject proportion
-    ##   <dbl>            <int>             <int>      <dbl>
-    ## 1     1               50                 5       0.1 
-    ## 2     2               50                28       0.56
-    ## 3     3               50                47       0.94
-    ## 4     4               50                50       1   
-    ## 5     5               50                50       1   
-    ## 6     6               50                50       1
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+
+``` r
+ ggsave("./plots/The_association_between_effect_size_and_power.pdf",proportion_reject, width = 8, height = 5)
+```
+
+Description:
+
+1.  When the effect size (true mu) is increasing, the power of the test
+    is increasing at the same time.
+
+2.  When the effect size (true mu) is greater than 4, the power of the
+    test is infinitely close to 1
