--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -249,18 +249,18 @@ bind_rows(output)
 ```
 
     ## # A tibble: 50 × 2
-    ##     mu_hat p_value
-    ##      <dbl>   <dbl>
-    ##  1  0.853    0.403
-    ##  2  0.483    0.586
-    ##  3  0.871    0.347
-    ##  4 -0.292    0.789
-    ##  5 -0.189    0.831
-    ##  6 -0.0460   0.961
-    ##  7 -0.369    0.676
-    ##  8 -0.0960   0.921
-    ##  9 -0.146    0.878
-    ## 10 -0.672    0.340
+    ##    mu_hat p_value
+    ##     <dbl>   <dbl>
+    ##  1  0.423  0.670 
+    ##  2  1.24   0.0879
+    ##  3 -1.41   0.183 
+    ##  4  0.351  0.687 
+    ##  5  1.28   0.200 
+    ##  6  0.184  0.803 
+    ##  7  1.90   0.0406
+    ##  8 -0.687  0.354 
+    ##  9 -0.434  0.656 
+    ## 10 -0.258  0.812 
     ## # … with 40 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
@@ -296,16 +296,16 @@ sim_results
     ## # A tibble: 300 × 4
     ##       mu  mu_hat p_value conclusion    
     ##    <dbl>   <dbl>   <dbl> <chr>         
-    ##  1     1  0.931   0.264  fail to reject
-    ##  2     1  0.459   0.596  fail to reject
-    ##  3     1  1.59    0.0607 fail to reject
-    ##  4     1 -0.110   0.912  fail to reject
-    ##  5     1 -0.178   0.824  fail to reject
-    ##  6     1  1.59    0.132  fail to reject
-    ##  7     1  0.611   0.542  fail to reject
-    ##  8     1  0.903   0.295  fail to reject
-    ##  9     1  0.0371  0.963  fail to reject
-    ## 10     1  1.76    0.111  fail to reject
+    ##  1     1  2.95   0.00299 reject        
+    ##  2     1  0.0820 0.928   fail to reject
+    ##  3     1 -0.742  0.319   fail to reject
+    ##  4     1  2.38   0.00832 reject        
+    ##  5     1  2.29   0.0170  reject        
+    ##  6     1  1.29   0.267   fail to reject
+    ##  7     1  0.204  0.788   fail to reject
+    ##  8     1  1.99   0.0289  reject        
+    ##  9     1  1.23   0.266   fail to reject
+    ## 10     1  0.880  0.349   fail to reject
     ## # … with 290 more rows
 
 1.  Count the number of total conclusions with each true mu
@@ -354,3 +354,31 @@ Description:
 
 2.  When the effect size (true mu) is greater than 4, the power of the
     test is infinitely close to 1
+
+Make a plot showing the average estimate of mu_hat on the y axis and the
+true value of μ on the x axis.
+
+``` r
+average_estimate_mu = sim_results %>% 
+  group_by(mu) %>% 
+  summarise(
+    average_mu_hat = mean(mu_hat)
+  ) %>% 
+  ggplot(aes(x = mu , y = average_mu_hat, color = mu )) +
+  geom_point() +
+  geom_line() +
+  labs(
+    title = "Average estimate of mu_hat vs True value of mu",
+     x = "True mu",
+     y = "The average estimate of mu_hat"
+  ) +
+  theme(plot.title = element_text(hjust = 0.5))
+
+average_estimate_mu
+```
+
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
+
+``` r
+ggsave("./plots/Average_estimate_of_mu_hat_vs_True_value_of_mu.pdf",average_estimate_mu, width = 8, height = 5)
+```
