--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -241,27 +241,27 @@ Set mu=0, generate 5000 datasets from the model x∼Normal\[μ,σ\] and save
 mu_hat and p.value arising from a test of H:μ=0 α=0.05 using a for loop
 
 ``` r
-output = vector("list",length = 50)
-for (i in 1:50){
+output = vector("list",length = 5000)
+for (i in 1:5000){
   output[[i]] = sim_estimate_pvalue(30,0,5)
 }
 bind_rows(output)
 ```
 
-    ## # A tibble: 50 × 2
+    ## # A tibble: 5,000 × 2
     ##    mu_hat p_value
     ##     <dbl>   <dbl>
-    ##  1  0.423  0.670 
-    ##  2  1.24   0.0879
-    ##  3 -1.41   0.183 
-    ##  4  0.351  0.687 
-    ##  5  1.28   0.200 
-    ##  6  0.184  0.803 
-    ##  7  1.90   0.0406
-    ##  8 -0.687  0.354 
-    ##  9 -0.434  0.656 
-    ## 10 -0.258  0.812 
-    ## # … with 40 more rows
+    ##  1 -1.15   0.275 
+    ##  2 -1.64   0.0975
+    ##  3  1.08   0.193 
+    ##  4 -0.444  0.630 
+    ##  5 -0.428  0.596 
+    ##  6 -1.50   0.0905
+    ##  7  1.53   0.137 
+    ##  8 -0.378  0.705 
+    ##  9  1.13   0.209 
+    ## 10 -1.21   0.240 
+    ## # … with 4,990 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
 
@@ -270,7 +270,7 @@ sim_results = tibble(
   mu = c(1,2,3,4,5,6)
 ) %>% 
   mutate(
-    output_lists = map(.x = mu,~rerun(50,sim_estimate_pvalue(30,.x,5))),
+    output_lists = map(.x = mu,~rerun(5000,sim_estimate_pvalue(30,.x,5))),
     estimate_df = map(output_lists,bind_rows)
   ) %>% 
   select(-output_lists) %>% 
@@ -293,20 +293,20 @@ sim_results = sim_results %>%
 sim_results
 ```
 
-    ## # A tibble: 300 × 4
+    ## # A tibble: 30,000 × 4
     ##       mu  mu_hat p_value conclusion    
     ##    <dbl>   <dbl>   <dbl> <chr>         
-    ##  1     1  2.95   0.00299 reject        
-    ##  2     1  0.0820 0.928   fail to reject
-    ##  3     1 -0.742  0.319   fail to reject
-    ##  4     1  2.38   0.00832 reject        
-    ##  5     1  2.29   0.0170  reject        
-    ##  6     1  1.29   0.267   fail to reject
-    ##  7     1  0.204  0.788   fail to reject
-    ##  8     1  1.99   0.0289  reject        
-    ##  9     1  1.23   0.266   fail to reject
-    ## 10     1  0.880  0.349   fail to reject
-    ## # … with 290 more rows
+    ##  1     1  2.17    0.0684 fail to reject
+    ##  2     1  0.204   0.842  fail to reject
+    ##  3     1 -0.0167  0.985  fail to reject
+    ##  4     1  0.657   0.431  fail to reject
+    ##  5     1  0.753   0.435  fail to reject
+    ##  6     1  0.972   0.325  fail to reject
+    ##  7     1 -0.0722  0.942  fail to reject
+    ##  8     1  0.799   0.424  fail to reject
+    ##  9     1  0.978   0.334  fail to reject
+    ## 10     1  0.417   0.611  fail to reject
+    ## # … with 29,990 more rows
 
 1.  Count the number of total conclusions with each true mu
 
@@ -381,4 +381,34 @@ average_estimate_mu
 
 ``` r
 ggsave("./plots/Average_estimate_of_mu_hat_vs_True_value_of_mu.pdf",average_estimate_mu, width = 8, height = 5)
+```
+
+Make a second plot the average estimate of μ̂ only in samples for which
+the null was rejected on the y axis and the true value of μ on the x
+axis.
+
+``` r
+average_estimate_mu_reject = sim_results %>% 
+  filter(conclusion == "reject") %>% 
+  group_by(mu) %>% 
+  summarise(
+    average_mu_hat_reject = mean(mu_hat)
+  ) %>% 
+  ggplot(aes(x = mu , y = average_mu_hat_reject, color = mu )) +
+  geom_point() +
+  geom_line() +
+  labs(
+    title = "Average estimate of mu_hat vs True value of mu for 'rejected' samples",
+     x = "True mu",
+     y = "The average estimate of mu_hat"
+  ) +
+  theme(plot.title = element_text(hjust = 0.5))
+  
+average_estimate_mu_reject
+```
+
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
+
+``` r
+ggsave("./plots/Average_estimate_of_mu_hat_vs_True_value_of_mu_for_reject_samples.pdf",average_estimate_mu, width = 8, height = 5)
 ```
